1999-03-14  Rosanna Yuen <rwsy@mit.edu>

	* sol.scm: fixed undo so it now works  (many game files changed to
	allow undo to work)
	* events.c: fixed event handling so that it makes sense.
	* menu.c: fixed about box
	* yukon.scm: finished hint

1999-03-11  Ian Peters  <itp@gnu.org>

	* menu.c: Killed the periods at the end of the tooltips.

1999-03-10  Ian Peters  <itp@gnu.org>

	* dialog.c: Calls to gnome_dialog_set_parent added for Game options,
	Preferences, and game over dialog.

1999-03-09  Rosanna Yuen  <rwsy@mit.edu>

	* klondike.scm (button-double-clicked): moved the double clicking
	code back to the double clicking function.
	* clock.scm (button-double-clicked): fixed double clicking bug

1999-03-06  Rosanna Yuen  <rwsy@mit.edu>

	* scorpion.scm (button-released): finished scorpion.scm (minus hints)
	* odessa.scm (begin-score): fixed scoring of dealt cards.

1999-03-06  Rosanna Yuen  <rwsy@mit.edu>

	* template.scm: added a template to facilitate faster creation of
	games.
	* scorpion.scm: added new (incomplete) game.

1999-03-04  Rosanna Yuen  <rwsy@mit.edu>

	* royal_east.scm: added new game.

1999-03-03  Rosanna Yuen  <rwsy@mit.edu>

	* westhaven.scm: added new game.

1999-03-02  Rosanna Yuen  <rwsy@mit.edu>

	* union_square.scm: added new game

1999-02-24  Rosanna Yuen  <rwsy@mit.edu>

	* added info to status bar for most games
	* spider.scm: added checks for game over and game won, and added
	hint support.
	
1999-02-23  Rosanna Yuen  <rwsy@mit.edu>

	* bristol.scm: added new game

1999-02-22  Rosanna Yuen  <rwsy@mit.edu>

	* spider.scm: added scoring; fixed minor bugs
	* hopscotch.scm: added new game
	* beleaguered_castle.scm: moved deck making to sol.scm
	* sol.scm (make-deck-list-ace-low): moved this from
	beleaguered_castle.scm
	* auld_lang_syne.scm: added new game
	* eagle_wing.scm (button-double-clicked): fixed minor bug with
	last Reserve card.
	* klondike.scm (button-double-clicked): allows double clicking to