@@ -1,5 +1,6 @@
 1999-03-14  Rosanna Yuen <rwsy@mit.edu>
 
+	* odessa.scm (button-double-clicked): added double-click
 	* sol.scm: fixed undo so it now works  (many game files changed to
 	allow undo to work)
 	* events.c: fixed event handling so that it makes sense.
